--- a/app/src/main/res/layout/activity_add_habit.xml
+++ b/app/src/main/res/layout/activity_add_habit.xml
@@ -5,17 +5,22 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".addActivity.AddHabitActivity"
-    android:layout_margin="15dp">
+    tools:context=".addActivity.AddHabitActivity">
 
-
-<fragment
-    android:name="com.example.halward.addActivity.AddHabitFragment"
-    android:id="@+id/add_fragment"
-    android:layout_weight="1"
+    <androidx.appcompat.widget.Toolbar
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="?attr/actionBarSize"
 
-</fragment>
+    android:textAlignment="center" />
+
+    <fragment
+        android:id="@+id/add_fragment"
+        android:name="com.example.halward.addActivity.AddHabitFragment"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+    </fragment>
 
 </LinearLayout>
