--- a/app/src/main/res/layout/fragment_add_habit.xml
+++ b/app/src/main/res/layout/fragment_add_habit.xml
@@ -1,34 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/add_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_margin="15dp"
+    android:padding="15dp"
     android:focusableInTouchMode="true"
     tools:context=".addActivity.AddHabitFragment">
 
-    <ImageButton
-        android:id="@+id/back_home"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        android:background="@drawable/back"
-        android:paddingBottom="10dp"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/add_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
         android:text="@string/title_label"
         android:textSize="@dimen/card_text_size"
+        android:layout_marginTop="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/back_home" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/add_title_ed"
@@ -173,8 +166,8 @@
             android:layout_marginRight="10dp" />
 
 
-
     </LinearLayout>
+
     <LinearLayout
         android:id="@+id/linear_tags_2"
         android:layout_width="wrap_content"
@@ -213,15 +206,16 @@
         android:id="@+id/view_photo"
         android:layout_width="match_parent"
         android:layout_height="70dp"
+        android:layout_marginTop="35dp"
         android:background="@color/nav_primary"
         android:orientation="horizontal"
-        android:layout_marginTop="35dp"
         app:cardCornerRadius="@dimen/card_radius"
         app:layout_constraintBottom_toTopOf="@+id/add_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintTop_toBottomOf="@+id/linear_tags_2"
         app:layout_constraintVertical_bias="1.0">
+
         <FrameLayout
             android:id="@+id/view_progressBar"
             android:layout_width="match_parent"
@@ -230,6 +224,7 @@
 
 
         </FrameLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -247,8 +242,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
-                android:paddingTop="20dp"
                 android:paddingLeft="15dp"
+                android:paddingTop="20dp"
                 android:text="@string/add_photo"
                 android:textSize="20sp" />
         </LinearLayout>
